<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.signupform.FormActivity">

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_greeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.455"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_field"
        android:inputType="textPersonName"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/greetingText"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/greetingText" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/nameField"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/nameField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/emailTextField" />

    <EditText
        android:id="@+id/confirmField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password_field"
        android:inputType="textPassword"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        android:layout_marginRight="-24dp"
        app:layout_constraintRight_toRightOf="@+id/passwordField" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        tools:layout_editor_absoluteX="154dp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmField" />

</android.support.constraint.ConstraintLayout>
